<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:layout_marginTop="60dp"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/timer_img"/>

    <TextView
        android:id="@+id/timeTV"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/place_holder_time"
        android:textSize="45sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/startButton"
            android:layout_width="155dp"
            android:layout_height="50dp"
            android:textSize="19sp"
            android:text="@string/start_text"
            android:backgroundTint="@color/navi_blue"/>

        <Button
            android:id="@+id/resetButton"
            android:layout_marginLeft="20dp"
            android:layout_width="155dp"
            android:layout_height="50dp"
            android:textSize="19sp"
            android:text="@string/reset_text"
            android:backgroundTint="@color/navi_blue"/>

    </LinearLayout>




</LinearLayout>