<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginLeft="5dp"
        android:layout_marginTop="30dp"
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:background="@drawable/background"
        android:orientation="horizontal">

        <ImageView
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_human"
            />
        <TextView
            android:layout_marginLeft="5dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/custom_name" />

    </LinearLayout>

    <TextView
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/subscription"/>

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="130dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/background_setting"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="274dp"
            android:layout_height="130dp"
            android:orientation="vertical">

            <TextView
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="23sp"
            android:text="@string/type_of_subscription"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="17sp"
                android:text="@string/next_payment"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="17sp"
                android:text="@string/price"/>

        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="274dp"
            android:layout_height="100dp"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="Ваш баланс"/>

            <TextView
                android:layout_marginTop="0dp"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="30sp"
                android:text="0 ₽"/>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>